Implement address autocomplete and validation with Google Places API
- Added `zip_code` field to Lead model with validation
- Updated LeadForm to include zip_code field and custom validation methods
- Integrated Google Places API for address autocomplete
- Enhanced templates to display and validate ZIP code
- Updated settings to include Google Places API key configuration
- Added comprehensive documentation for implementation and setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - DEBUG=1
       - DATABASE_URL=sqlite:///db.sqlite3
       - ALLOWED_HOSTS=savedrivenow.siber.live,
+      - GOOGLE_PLACES_API_KEY=${GOOGLE_PLACES_API_KEY}
     depends_on:
       - db
 
