--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles
+      - ./staticfiles:/app/staticfiles
     environment:
       - DEBUG=1
       - DATABASE_URL=sqlite:///db.sqlite3
@@ -31,10 +31,9 @@ services:
       - "8642:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/app/staticfiles
+      - ./staticfiles:/app/staticfiles
     depends_on:
       - web
 
 volumes:
   postgres_data:
-  static_volume:
