Add Celery tasks for asynchronous email handling and setup
- Implemented `send_lead_notification_email_async` to send lead notification emails to recipients.
- Created `send_welcome_email_async` for sending welcome emails to leads.
- Added `send_emails_to_subscribers_async` to queue email notifications for active subscribers.
- Configured Celery in `celery.py` for task management.
- Added scripts to start Celery worker and beat scheduler.
- Developed a test script `test_async_setup.py` to verify Celery connection and email task functionality.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.8'
 
 services:
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+
   web:
     build: .
     volumes:
@@ -14,8 +23,44 @@ services:
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
       - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
       - db
+      - redis
+
+  celery:
+    build: .
+    volumes:
+      - .:/app
+    environment:
+      - DEBUG=1
+      - DATABASE_URL=sqlite:///db.sqlite3
+      - EMAIL_HOST_USER=${EMAIL_HOST_USER}
+      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+      - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    command: celery -A savedrivenow worker --loglevel=info --concurrency=4
+    depends_on:
+      - db
+      - redis
+    restart: unless-stopped
+
+  celery-beat:
+    build: .
+    volumes:
+      - .:/app
+    environment:
+      - DEBUG=1
+      - DATABASE_URL=sqlite:///db.sqlite3
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    command: celery -A savedrivenow beat --loglevel=info
+    depends_on:
+      - db
+      - redis
+    restart: unless-stopped
 
   db:
     image: postgres:15
@@ -40,3 +85,4 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
