--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,8 @@ __pypackages__/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
+celerybeat-schedule-shm
+celerybeat-schedule-wal
 
 # SageMath parsed files
 *.sage.py
